fix(ui5-notification-list): fix header bar visibility
fixes: #9995

--- a/packages/fiori/test/pages/styles/NotificationListGroupItem.css
+++ b/packages/fiori/test/pages/styles/NotificationListGroupItem.css
@@ -39,6 +39,7 @@
 }
 
 .notificationsPopoverHeader {
+    width: 100%;
     display: flex;
     flex-direction: column;
 }
