--- a/packages/website/docs/_samples/fiori/NotificationList/InShellBar/main.css
+++ b/packages/website/docs/_samples/fiori/NotificationList/InShellBar/main.css
@@ -13,6 +13,7 @@
 }
 
 .notificationsPopoverHeader {
+	width: 100%;
 	display: flex;
 	flex-direction: column;
 }
